--- a/style.css
+++ b/style.css
@@ -52,14 +52,14 @@ button:hover {
 .banner {
 	opacity: 0;
 	position: relative;
-	top: -100%;
+	top: -100px;
 	width: 100%;
 	min-width: 1000px;
 }
 
 /* NAVIGATION BAR */
 .nav ul {
-	z-index: 3;
+	z-index: 1;
 	width: 100%;
 	min-width: 1000px;
 	margin: 0;
